[package]
name = "mobc-postgres"
version = "0.4.1"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Postgres support for the mobc connection pool"
repository = "https://github.com/importcjj/mobc-postgres"
keywords = ["postgres", "pool", "database", "async", "await"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-bit-vec-0_6 = ["tokio-postgres/with-bit-vec-0_6"]
with-chrono-0_4 = ["tokio-postgres/with-chrono-0_4"]
with-eui48-0_4 = ["tokio-postgres/with-eui48-0_4"]
with-geo-types-0_4 = ["tokio-postgres/with-geo-types-0_4"]
with-serde_json-1 = ["tokio-postgres/with-serde_json-1"]
with-uuid-0_8 = ["tokio-postgres/with-uuid-0_8"]

[dependencies]
tokio-postgres = "0.5"
mobc = "0.4"
futures = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }